# codificare_si_compresie

./: .gitignore  anotherfile.txt  fisier.txt  lab.txt  lab_03.txt  lab_2.txt  outSmallFile.foo  readme.md
huffman_v7/: Cargo.toml  better_test.txt  input_chinese.txt
huffman_v7/src/: api.rs  bit_operations.rs  huffman.rs  main.rs  models.rs  tree.rs
huffman_v7/static/: app.js  index.html  styles.css
lz77_v6/: Cargo.toml  compression_analysis.py  run_analysis.sh
lz77_v6/analysis_results/: input_chinese_results.txt  lz77_combinatii_20251115_145219.xlsx  test_59_2_results.txt
lz77_v6/src/: api.rs  bit_operations.rs  lz77.rs  main.rs  models.rs
lz77_v6/static/: app.js  index.html  style.css
lzw_v3/: Cargo.toml  compression_analysis.py  readme.md  requirements.txt  run_analysis.sh  test_59_2.csv  test_input.txt
lzw_v3/analysis_results/: analiza_compresie_20251115_205539.xlsx
lzw_v3/src/: api.rs  bit_operations.rs  lzw.rs  main.rs  models.rs
lzw_v3/static/: index.html  script.js  style.css
predictiv/: Cargo.toml
predictiv/src/: api.rs  bit_operations.rs  helpers.rs  main.rs  models.rs  my_custom_image.rs  predictiv.rs  script.py
predictiv/static/: index.css  index.html  index.js
